--- a/WorkShop2/Index.html
+++ b/WorkShop2/Index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkShop 2: curriculum</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
 </head>
+
 <body>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <br>
+
+    <!--Colocar el titulo-->
+    <h1 class="p-3 mb-2 bg-danger-subtle text-danger-emphasis">Currículum</h1>
+    <hr> <!-- Crear una línea separadora -->
+
+    <!-- Colocar mi nombre en titulo 2 y en cursiva -->
+    <h3>
+        <i> Angie Karolina Villegas Murillo </i>
+    </h3>
+
+    <hr>
+
+
+    <!-- Información -->
+    <div>
+        <h5>
+            <b>
+                <i>Sobre Mi</i>
+            </b>
+        </h5>
+        <i>
+            Estudiante de Ingeniería de Software en la Universidad Técnica Nacional.
+            Busco un buen empleo donde pueda desarrollar mis habilidades en programación.
+        </i>
+    </div>
+    <hr>
+    <hr>
+
+    <!--Crear Icono de ubicacion -->
+    <div style="display: flex; align-items: center;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="dark" class="bi bi-geo-alt"
+            viewBox="0 0 16 16" style="margin-right: 5px;">
+            <path
+                d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A32 32 0 0 1 8 14.58a32 32 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10" />
+            <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4m0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
+        </svg>
+        <p style="margin: 0;">Aguas Zarcas, San Carlos, Costa Rica.</p>
+    </div>
+    <br>
+
+    <!-- Crear un botón con mi LinkedIn -->
+    <div>
+        <!--1. Link de mi perfil -->
+        <a href="https://www.linkedin.com/in/angie-villegas-a37739309?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+            target="_blank" class="btn btn-primary"> <!--2. Abrir una nueva pestaña para ver el perfil -->
+            <i class="fab fa-linkedin"></i> LinkedIn <!--3. Crear el botón LinkedIn -->
+        </a>
+    </div>
+    <br>
+
+    <!-- Añadir Imagen -->
+    <div>
+        <img src="CurriculumFt.png" class="rounded float-start" alt="Foto">
+    </div>
+
 </body>
+
 </html>
