--- a/WorkShop3/Cats/Index.html
+++ b/WorkShop3/Cats/Index.html
@@ -7,13 +7,22 @@
     <title>Cats</title>
 </head>
 
-<body style="background-color: #CCF6FD;" >
+<body style="background-color: #DEE6EA;">
 
-    <a href="http://www.anvillegasm.com/WorkShop3/Index.html" style="text-decoration: none;" > Back </a>    <br/>
+    <button type="button" class="btn btn-outline-light"
+        style="color: #000000; background-color: #DEE6EA; border: 1px solid #000000;">
+        <a href='http://www.anvillegasm.com/WorkShop3/Index.html' style="text-decoration: none; color: #000000; "> Back </a>
+    </button>
+    
     <h1> Cats Images </h1>
-    <img src="Images/cat1.png" width="300" height="200" />
-    <img src="Images/cat2.png" width="300" height="200" />
-    <img src="Images/cat3.png" width="300" height="200" />
+    <hr />
+    <br />
+    <img src="Images/cat1.png" width="350" height="250" style="margin-right: 200px;" />
+    <img src="Images/cat2.png" width="350" height="250" style="margin-right: 200px;" />
+    <img src="Images/cat3.png" width="350" height="250" />
+    <br />
+    <hr />
+
 
 </body>
 
