--- a/WorkShop3/Index.html
+++ b/WorkShop3/Index.html
@@ -7,14 +7,22 @@
     <title>WorkShop3</title>
 </head>
 
-<body style="background-color: #ABE3FF;">
+<body style="background-color: #DEE6EA;">
 
-    <img src="/Images/logo.png" width="200" height="150">
+    <div style="text-align: center;">
 
-    <h1> PRINCIPAL PAGE </h1>
+        <h1 style="background-color: #213171; color:#DEE6EA" > Welcome to your gallery </h1>
+        <img src="Images/logo.png" width="400" height="350" style="margin-left: 75px; margin-top: 20px; margin-bottom: 20px;" />
+        <hr />
 
-    <a href="Cats/Index.html" style="text-decoration: none;" > Folder Cats </a>    <br/>
-    <a href="Dogs/Index.html" style="text-decoration: none;" > Folder Dogs </a>    <br/>
+    </div>
+    
+    <div style="text-align: center;">
+        <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;"> What do you want to see?</h2>
+        <a href="Cats/Index.html" style="text-decoration: none;color: black; font-size: 15px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> * Images of kittens </a> <br />
+        <a href="Dogs/Index.html" style="text-decoration: none;color: black; font-size: 15px; font-family: Verdana, Geneva, Tahoma, sans-serif;">* Images of puppies </a> <br />
+
+    </div>
 
 </body>
 
