--- a/WorkShop3/Cats/Index.html
+++ b/WorkShop3/Cats/Index.html
@@ -9,20 +9,30 @@
 
 <body style="background-color: #DEE6EA;">
 
+    <!--Botón con link a ir a la sección principal -->
     <button type="button" class="btn btn-outline-light"
         style="color: #000000; background-color: #DEE6EA; border: 1px solid #000000;">
-        <a href='http://www.anvillegasm.com/WorkShop3/Index.html' style="text-decoration: none; color: #000000; "> Back </a>
+        <a href='http://www.anvillegasm.com/WorkShop3/Index.html' style="text-decoration: none; color: #000000; "> Back
+        </a>
     </button>
-    
+
+    <!-- Titulo e imagenes de Gatos-->
     <h1> Cats Images </h1>
     <hr />
     <br />
-    <img src="Images/cat1.png" width="350" height="250" style="margin-right: 200px;" />
+    <img src="/WorkShop3/Cats/Images/cat1.png" width="350" height="250" style="margin-right: 200px;" />
     <img src="Images/cat2.png" width="350" height="250" style="margin-right: 200px;" />
     <img src="Images/cat3.png" width="350" height="250" />
     <br />
     <hr />
 
+    <!--Botón con link a ir a la sección de perros -->
+    <button type="button" class="btn btn-outline-light"
+        style="color: #000000; background-color: #DEE6EA; border: 1px solid #000000;  float: right;">
+        <a href='http://www.anvillegasm.com/WorkShop3/Dogs/Index.html' style="text-decoration: none; color: #000000; ">
+            Dogs
+        </a>
+    </button>
 
 </body>
 
