--- a/WorkShop3/Index.html
+++ b/WorkShop3/Index.html
@@ -9,19 +9,18 @@
 
 <body style="background-color: #DEE6EA;">
 
+    <!-- Agregar la Imagen Logo y color de fondo -->
     <div style="text-align: center;">
-
         <h1 style="background-color: #213171; color:#DEE6EA" > Welcome to your gallery </h1>
-        <img src="Images/logo.png" width="400" height="350" style="margin-left: 75px; margin-top: 20px; margin-bottom: 20px;" />
+        <img src="/WorkShop3/Images/logo.png" width="400" height="350" style="margin-left: 75px; margin-top: 20px; margin-bottom: 20px;" />
         <hr />
-
     </div>
-    
+
+    <!-- Liks para entre a los html -->
     <div style="text-align: center;">
         <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;"> What do you want to see?</h2>
         <a href="Cats/Index.html" style="text-decoration: none;color: black; font-size: 15px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> * Images of kittens </a> <br />
         <a href="Dogs/Index.html" style="text-decoration: none;color: black; font-size: 15px; font-family: Verdana, Geneva, Tahoma, sans-serif;">* Images of puppies </a> <br />
-
     </div>
 
 </body>
