--- a/WorkShop3/Index.html
+++ b/WorkShop3/Index.html
@@ -2,25 +2,28 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkShop3</title>
+    <link rel="stylesheet" href="Principal.css" type="text/css"/>  
+    
 </head>
 
-<body style="background-color: #DEE6EA;">
+<body class="body">
 
     <!-- Agregar la Imagen Logo y color de fondo -->
-    <div style="text-align: center;">
-        <h1 style="background-color: #213171; color:#DEE6EA" > Welcome to your gallery </h1>
-        <img src="/WorkShop3/Images/logo.png" width="400" height="350" style="margin-left: 75px; margin-top: 20px; margin-bottom: 20px;" />
+    <div class="logo">
+        <h1> Welcome to your gallery </h1>
+        <img src="/WorkShop3/Images/logo.png"/>
         <hr />
     </div>
 
     <!-- Liks para entre a los html -->
-    <div style="text-align: center;">
-        <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;"> What do you want to see?</h2>
-        <a href="Cats/Index.html" style="text-decoration: none;color: black; font-size: 15px;font-family: Verdana, Geneva, Tahoma, sans-serif;"> * Images of kittens </a> <br />
-        <a href="Dogs/Index.html" style="text-decoration: none;color: black; font-size: 15px; font-family: Verdana, Geneva, Tahoma, sans-serif;">* Images of puppies </a> <br />
+    <div class="contenedor" >
+        <h2> What do you want to see?</h2>
+        <a href="Cats/Index.html"> * Images of kittens </a> <br />
+        <a href="Dogs/Index.html">* Images of puppies </a> <br />
     </div>
 
 </body>
