--- a/WorkShop3/Dogs/Index.html
+++ b/WorkShop3/Dogs/Index.html
@@ -10,11 +10,9 @@
 <body style="background-color: #DEE6EA;">
 
     <!--Botón con link a ir a la sección principal -->
-    <button type="button" class="btn btn-outline-light"
-        style="color: #000000; background-color: #DEE6EA; border: 1px solid #000000;">
-        <a href='http://www.anvillegasm.com/WorkShop3/Index.html' style="text-decoration: none; color: #000000; "> Back
-        </a>
-    </button>
+    <a href='http://www.anvillegasm.com/WorkShop3/Index.html' class="btn btn-outline-light"
+        style="text-decoration: none; color: #000000; "> Back
+    </a>
 
     <!-- Titulo e imagenes de perros-->
     <h1> Dogs Images </h1>
@@ -27,12 +25,10 @@
     <hr />
 
     <!--Botón con link a ir a la sección de gatos -->
-    <button type="button" class="btn btn-outline-light"
-        style="color: #000000; background-color: #DEE6EA; border: 1px solid #000000;  float: right;">
-        <a href='http://www.anvillegasm.com/WorkShop3/Cats/Index.html' style="text-decoration: none; color: #000000; "> Cats
-        </a>
-    </button>
-
+    <a href='http://www.anvillegasm.com/WorkShop3/Cats/Index.html' class="btn btn-outline-light"
+        style="text-decoration: none; color: #000000; "> Cats
+    </a>
+    
 </body>
 
 </html>
