--- a/WorkShop4/Index.html
+++ b/WorkShop4/Index.html
@@ -6,21 +6,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorkShop4</title>
-    <link rel="stylesheet" href="Principal.css" type="text/css" />
+    <link rel="stylesheet" href="Principla.css" type="text/css" />
 
 </head>
 
 <body>
 
     <header>
-        <nav>
+        <nav class="nav">
             <h1> NEWS PAPER</h1>
             <ul>
-                <li> <a href="#"> Noticia </a> </li>
-                <li> <a href="#"> Bibliografía </a> </li>
+                <li> <a href="/Principal/Index.html"> Principal </a> </li>
+                <li> <a href="/Noticia/Index.html"> News </a> </li>
+                <li> <a href="/Bibliografia/Index.html"> Bibliography </a> </li>
             </ul>
         </nav>
     </header>
+
+    <div class="container">
+        <h2> Welcome to your favorite digital newspaper</h2>
+        <img src="tecnology.png" />
+    </div>
 
 </body>
 
