--- a/WorkShop4/Index.html
+++ b/WorkShop4/Index.html
@@ -12,21 +12,32 @@
 
 <body>
 
+    <!--Encabezado de la página principal del peridico-->
     <header>
         <nav class="nav">
-            <h1> NEWS PAPER</h1>
+            <h1> World Report NewsPaper</h1>
             <ul>
-                <li> <a href="/Principal/Index.html"> Principal </a> </li>
-                <li> <a href="/Noticia/Index.html"> News </a> </li>
-                <li> <a href="/Bibliografia/Index.html"> Bibliography </a> </li>
+                <li> <a href="/WorkShop4/Noticia/Index.html"> News </a> </li>
+                <li> <a href="/WorkShop4/Bibliografia/Index.html"> Bibliography </a> </li>
             </ul>
         </nav>
     </header>
 
+    
     <div class="container">
-        <h2> Welcome to your favorite digital newspaper</h2>
-        <img src="tecnology.png" />
+        <div class="text-content">
+            <h2> Welcome to your favorite digital newspaper</h2> 
+            <p> We are thrilled to have you here. In our News section, you'll find the latest updates and trends from the world of technology. 
+                From groundbreaking innovations to the newest developments in gadgets, software, and scientific advancements, we have everything 
+                you need to stay informed.Explore our articles and keep up with the fascinating and fast-paced world of technology. <br/>
+                "Knowledge is power"
+            </p> 
+        </div>
+        <div class="image-container">
+            <img src="Imagenes/technology2.png" alt="Technology Image" />
+        </div>
     </div>
+    
 
 </body>
 
