--- a/WorkShop4/Noticia/Index.html
+++ b/WorkShop4/Noticia/Index.html
@@ -40,8 +40,8 @@
 
         <!-- Texto junto a la imagen -->
         <div class="texto-noticia">
-            <h2> Carta abierta de los expertos de OpenAI advierte sobre “riesgos graves” y pide protección para los
-                denunciantes </h2>
+            <h2> Open letter from OpenAI experts warns of "serious risks" and calls for protection for whistleblowers
+            </h2>
             <p> A group of experts from OpenAI is demanding that artificial intelligence companies be much more
                 transparent about the "serious risks" of AI and that they protect employees who express concerns about
                 the technology they are developing.
@@ -74,19 +74,52 @@
         </div>
     </div>
 
-    <!--Video de la inteligencia artificial 
-    <div class="video-container">
-        <h2>WHAT IS ARTIFICIAL INTELLIGENCE</h2>
-        <p> Watch the video..</p>
-        <video controls autoplay>
-            <source src="AI.mp4" type="video/mp4">
-            Tu navegador no soporta la etiqueta de video.
+    <hr />
+
+    <!--Video de la inteligencia artificial -->
+    <div class="contenedor-vtexto">
+        <h2> Reinforcement learning AI might bring humanoid robots to the real world </h2>
+        <video controls autoplay class="video">
+            <source src="playsoccer.mp4" type="video/mp4">
         </video>
+        <p> “Soccer is a nice environment to study general reinforcement learning,” says Guy Lever of Google DeepMind, a
+            coauthor of the paper. It requires planning, agility, exploration, cooperation and competition.
+            The toy size of the robots “allowed us to iterate fast,” Haarnoja says, because larger robots are harder to
+            operate and repair. And before deploying the machine learning software in the real robots — which can break
+            when they fall over — the researchers trained it on virtual robots, a technique known as sim-to-real
+            transfer.
+            Training of the virtual bots came in two stages. In the first stage, the team trained one AI using RL merely
+            to get the virtual robot up from the ground, and another to score goals without falling over. As input, the
+            AIs received data including the positions and movements of the robots joints and, from external cameras,
+            the positions of everything else in the game. (In a recently posted preprint, the team created a version of
+            the system that relies on the robots own vision.) The AIs had to output new joint positions. If they
+            performed well, their internal parameters were updated to encourage more of the same behavior. In the second
+            stage, the researchers trained an AI to imitate each of the first two AIs and to score against closely
+            matched opponents (versions of itself).
+            To prepare the control software, called a controller, for the real-world robots, the researchers varied
+            aspects of the simulation, including friction, sensor delays and body-mass distribution. They also rewarded
+            the AI not just for scoring goals but also for other things, like minimizing knee torque to avoid injury.
+
+            Real robots tested with the RL control software walked nearly twice as fast, turned three times as quickly
+            and took less than half the time to get up compared with robots using the scripted controller made by the
+            manufacturer. But more advanced skills also emerged, like fluidly stringing together actions. “It was really
+            nice to see more complex motor skills being learned by robots,” says Radosavovic, who was not a part of the
+            research. And the controller learned not just single moves, but also the planning required to play the game,
+            like knowing to stand in the way of an opponent’s shot.
+
+            “In my eyes, the soccer paper is amazing,” says Joonho Lee, a roboticist at ETH Zurich. “We’ve never seen
+            such resilience from humanoids.”
+            <br />
+            News written by: Matthew Hutson.
+            <br />
+            Science News
+        </p>
     </div>
-    -->
 
+    <hr />
 
-
+    <p class="contenedor-vtexto"> ¡IMPORTANT! THE NEWS WAS TAKEN FROM WEB PAGES, CHECK THE BIBLIOGRAPHY SECTION TO SEE
+        THE ORIGINALS. </p>
 
 </body>
 
