--- a/I-Proyecto/Index.html
+++ b/I-Proyecto/Index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer Proyecto</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="PagPrincipal.css" type="text/css" />
+
 </head>
+
 <body>
-    
+    <div class="color-div">
+        <div class="cont-titulo">
+            <img src="auto.png" alt="Logo" class="img-auto">
+            <h1>AVENTONES</h1>
+        </div>
+
+        <img src="google.png" alt="Sign in with Google">
+
+        <p class="negrita"> Or</p>
+
+        <h2>Username</h2>
+        <form class="estilo-input">
+            <input type="text" required placeholder="Username">
+        </form>
+
+        <h2>Password</h2>
+        <form>
+            <input type="password" required placeholder="Password">
+        </form>
+
+        <p>
+            Not an user? <a href="">Register Now</a>
+        </p>
+
+        <button>
+            Login
+        </button>
+    </div>
 </body>
+
 </html>
