--- a/WorkShop5/Index.html
+++ b/WorkShop5/Index.html
@@ -12,17 +12,16 @@
     <div class="contenedor">
         <div class="arriba">
             <h1>
-                Stop Coding non-responsive sites. <br />
-                Let users view sites from anywhere.
+                La Ventanita De Chavela
             </h1>
 
             <button class="button1">
-                TRY SKELETON
+                Visita el menú
             </button>
         </div>
 
         <div class="imagen">
-            <img src="iphone.png" alt="iphone" class="img1">
+            <img src="chef.png" alt="Perrito" class="img1">
         </div>
 
     </div>
@@ -31,33 +30,33 @@
     <div class="posicion">
 
         <div class="sub">
-            <h2 class="h2-cont"> 67% </h2>
-            <h3>Purchase Increase</h3>
-            <p class="p-cont">Porcentage of users more likely to <br /> purchase on mobile friendly site</p>
+            <h2 class="h2-cont"> 100% </h2>
+            <h3>Clientes Satisfechos</h3>
+            <p class="p-cont">Nuestra comida es la  <br /> mejor de la zona.</p>
         </div>
 
         <div class="sub">
-            <h2 class="h2-cont"> 90% </h2>
-            <h3>Multi-device Users</h3>
-            <p class="p-cont">Most of the world accesses the internet on <br /> multiple devices</p>
+            <h2 class="h2-cont"> 100% </h2>
+            <h3>Comidas Deliciosas</h3>
+            <p class="p-cont"> Tenemos el mejor sazón y los <br /> muejores ingredientes.</p>
         </div>
 
         <div class="sub">
-            <h2 class="h2-cont"> 66% </h2>
-            <h3>Sad Users</h3>
-            <p class="p-cont">Porcentage of users that are frustrated <br /> with pag load times</p>
+            <h2 class="h2-cont"> 100% </h2>
+            <h3>Recomendados</h3>
+            <p class="p-cont">Ven y descrubre tu comida <br /> favorita.</p>
         </div>
 
     </div>
 
     <div class="cont-3">
-        <h2> Need Help getting started?</h2>
+        <h2> Quieres contactarnos?</h2>
 
-        <p>Skeleton is an amazingly easy place to start with responsive development. If you <br />
-            want to learn more,just visit the documentation</p>
+        <p>La Ventanita de Chavela es un emprendimiento familiar
+            <br/> que te sorprenderá con sus deliciosas comidas. </p>
 
         <button class="button2">
-            TRY SKELETON
+            Contactános
         </button>
 
     </div>
@@ -65,13 +64,12 @@
     <div>
         <div class="posicion2">
             
-                <h3>Responsive Images</h3>
-                <p class="p-cont"> Skeleton images sit easily in grid with u-max-full-widh class. I suggest Exploring
-                    <br />
-                    solution to serving different images based on device size
+                <h3>Puedes Conseguir platillos como estos </h3>
+                <p class="p-cont"> 
+                    Serán de tus favoritos ...
                 </p>
-                <img src="placeholder.png" alt="" class="sobreImg">
-                <img src="placeholder.png" alt="" class="sobreImg2">
+                <img src="Sanwich.jpg" alt="" class="sobreImg">
+                <img src="arroz-con-camarones.jpg" alt="" class="sobreImg2">
 
             
         </div>
